@@ -43,7 +43,7 @@ None.
 
 =head1 VERSION
 
-version 0.03
+version 0.04
 
 =head1 METHODS
 
